--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc",
         "test": "jest",
-        "lint": "eslint --fix --no-error-on-unmatched-pattern && prettier --write --ignore-unknown .",
+        "lint": "eslint . --fix --no-error-on-unmatched-pattern && prettier --write --ignore-unknown .",
         "start": "npm run build && node dist/server.js",
         "dev": "nodemon src/server.ts"
     },
@@ -23,6 +23,7 @@
         "winston": "^3.14.2"
     },
     "devDependencies": {
+        "@repo/eslint-config": "*",
         "@testcontainers/mongodb": "^10.13.1",
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^6.1.1",
