--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "workspaces": [
         "frontend",
-        "backend/*"
+        "backend/*",
+        "packages/*"
     ],
     "scripts": {
         "build": "turbo run build",
@@ -17,14 +18,10 @@
         "prepare": "husky || true"
     },
     "devDependencies": {
-        "@eslint/js": "^9.10.0",
-        "eslint": "^9.10.0",
-        "eslint-config-prettier": "^9.1.0",
         "husky": "^9.1.6",
         "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
-        "turbo": "^2.1.2",
-        "typescript-eslint": "^8.5.0"
+        "turbo": "^2.1.2"
     },
     "lint-staged": {
         "*.{js, jsx,ts,tsx}": [
