--- a/packages/typescript-config/tsconfig-service.json
+++ b/packages/typescript-config/tsconfig-service.json
@@ -15,7 +15,6 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "strictNullChecks": false,
-        "strictBindCallApply": false,
-        "outDir": "./dist"
+        "strictBindCallApply": false
     }
 }
