--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^5.0.0",
         "prettier": "^3.3.3"
     }
 }
