--- a/project/apps/api-gateway/package.json
+++ b/project/apps/api-gateway/package.json
@@ -13,6 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "type-check": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@repo/pipes": "workspace:*",
     "@repo/dtos": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.3",
