--- a/project/apps/web/package.json
+++ b/project/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --ext \".js,.ts,.tsx\" --report-unused-disable-directives \"**/*.{js,ts,tsx}\" --fix",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
