--- a/project/packages/dtos/package.json
+++ b/project/packages/dtos/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "pnpm build --watch",
     "build": "tsc -b -v",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "type-check": "tsc"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
