--- a/project/turbo.json
+++ b/project/turbo.json
@@ -10,6 +10,9 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
+    "type-check": {
+      "dependsOn": ["^type-check"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
