--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,20 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.445.0",
+    "monaco-editor": "^0.52.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
+    "react-use-websocket": "^4.8.1",
     "sweetalert2": "^11.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
