--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+# This docker-compose file is for local development only. It is not intended to be deployed.
 
 services:
     user-service:
