--- a/peerprep-fe/package.json
+++ b/peerprep-fe/package.json
@@ -11,6 +11,7 @@
     "pre-commit": "pnpm format && git add -u"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
