--- a/question-service/package.json
+++ b/question-service/package.json
@@ -21,8 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.3",
-    "prettier": "^3.3.3"
+    "mongoose": "^8.6.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -31,6 +30,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.6.1",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
