--- a/backend/UserService/Dockerfile
+++ b/backend/UserService/Dockerfile
@@ -8,6 +8,6 @@ CMD ["npm", "run", "dev"]
 FROM node:20-alpine AS production
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci --only=production
 COPY . .
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
