--- a/question-service/docker-compose.yml
+++ b/question-service/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   mongodb:
     image: mongo:latest
     container_name: mongodb-question-service
+    # expose port for testing purposes
+    ports:
+      - "27018:27017"
     volumes:
       - ./mongo-data:/data/db
     env_file:
