--- a/backend/service-user/src/main/resources/application.properties
+++ b/backend/service-user/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT secret key
 security.jwt.secretKey=${JWT_SECRET_KEY}
@@ -27,4 +28,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-# spring.config.import=optional:file:.env[.properties]
+ spring.config.import=optional:file:.env[.properties]
