--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: ./question-service
       target: $BUILD_ENV
     ports:
-      - $QUESTION_SVC_PORT
+      - $QUESTION_SVC_PORT:$QUESTION_SVC_PORT
     environment:
       - PORT=$QUESTION_SVC_PORT
       - DB_CLOUD_URI=$QUESTION_SVC_DB_URI
