--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
         "lucide-react": "^0.441.0",
         "moment": "^2.30.1",
         "next": "14.2.11",
+        "next-auth": "^4.24.8",
         "react": "^18",
         "react-ace": "^12.0.0",
         "react-dom": "^18",
