--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 # Frontend
 
-NEXT_PUBLIC_QUESTION_SERVICE_URL=http://g38-question-service:8003
+NEXT_PUBLIC_QUESTION_SERVICE_URL=http://localhost:8003
 # NEXT_PUBLIC_IMAGE_UPLOAD_KEY= <your-image-upload-key>
 FRONTEND_PORT=3000
 
